08-config-data.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-01
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-02
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-03
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-04
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
