10-resources.yml
#kubectl top pod nginx
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
      resources:
        requests:
          memory: "100Mi"
          cpu: "50m"
        limits:
          memory: "150Mi"
          cpu: "100m"
