11-quota.yml
apiVersion: v1
kind: Pod
metadata:
  name: quota-mem-cpu-demo
spec:
  containers:
    - name: quota-mem-cpu-demo-ctr
      image: nginx
      resources:
        limits:
          memory: "800Mi"
          cpu: "800m"
        requests:
          memory: "800Mi"
          cpu: "400m"
---
apiVersion: v1
kind: Pod
metadata:
  name: quota-mem-cpu-demo-1
spec:
  containers:
    - name: quota-mem-cpu-demo-ctr
      image: redis
      resources:
        limits:
          memory: "800Mi"
          cpu: "800m"
        requests:
          memory: "800Mi"
          cpu: "400m"
---
apiVersion: v1
kind: Pod
metadata:
  name: quota-mem-cpu-demo-2
spec:
  containers:
    - name: quota-mem-cpu-demo-ctr
      image: redis
      resources:
        limits:
          memory: "1800Mi"
          cpu: "1800m"
        requests:
          memory: "1800Mi"
          cpu: "1400m"
