17-demo-cluster-auto-scaler.yml
#kubectl top pod nginx
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
      resources:
        requests:
          memory: "5000Mi"
          cpu: "50m"
        limits:
          memory: "6000Mi"
          cpu: "100m"
