19-tolerate.yml
apiVersion: v1
kind: Pod
metadata:
  name: toleration-demo
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  tolerations:
    - effect: NoSchedule
      key: app
      operator: Equal
      value: demo-projectc
