21-pod-priority.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: high
  labels:
    app: guestbook
    tier: high
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: high
  template:
    metadata:
      labels:
        tier: high
    spec:
      priorityClassName: high-priority
      containers:
        - name: nginx
          image: docker.io/nginx:1.24
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: low
  labels:
    app: guestbook
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: low
  template:
    metadata:
      labels:
        tier: low
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx:1.24
