09-service.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---

apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: docker.io/rkalluru/debug
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: kube-system
spec:
  containers:
    - name: debug
      image: docker.io/rkalluru/debu
