expense-v1.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: docker.io/rkalluru/d79-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    protocol: TCP
    port: 80
    targetPort: 80
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: backend
#  labels:
#    name: backend
#  spec:
#    containers:
#      - name: backend
#        image: docker.io/saivikram2020251/backend
#        ports:
#          - containerPort: 80
#        env:
#          - name: DB_HOST
#            value: "mysql"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: backend
#  spec:
#    selector:
#    app: backend
#    ports:
#      protocol: TCP
#      port: 8080
#      targetPort: 8080
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: mysql
#  labels:
#    app: mysql
#  spec:
#    containers:
#      - name: mysql
#        image: docker.io/mysql:8.0
#        env:
#          - name: MY_SQL_ROOT_PASSWORD
#            value: ExpenseApp@1
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mysql
#  spec:
#    selector:
#    app: mysql
#    ports:
#      protocol: TCP
#      port: 3306
#      targetPort: 3306
#---
#apiVersion: batch/v1
#kind: Job
#metadata:
#  name: schema-load
#spec:
#    template:
#     spec:
#       containers:
#         - name: load
#           image: docker.io/saivikram2020251/schema-load
#           env:
#             - name: login root user
#               value: "root"
#             - name: login_password
#               value: ExpenseApp@1
#             - name: login_host
#               value: mysql
#             - name: app_repo
#               value: "https://github.com/vikramdevopsb79/expense-backend"
#             - name: schema_file
#               value: /app/schema/backend.sql
#           restartPolicy: Never
#    backoffLimit: 4
